# SQL-to_VIZ

./: SQL-query-PLOTTER_Basic_2_feb.py
SQL_TO_VIZ/: plot.html  pyproject.toml
SQL_TO_VIZ/app/: config.py  main.py
SQL_TO_VIZ/app/api/: app.py  code.py  test.py  testapp.py
SQL_TO_VIZ/app/core/: CodeGeneration.py  ModifiedSQL.py  mod_code.py
SQL_TO_VIZ/app/utils/: utilities.py
final gpt model/: gpt_codegen.py  gpt_codes_2.py  main.py  modified_sql_2.py
gemini_model/: gemV1.py  gemV2.py
